Fixed bug #2: Text Overflow

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@ body {
     text-align: right;
     padding: 10px;
     font-size: 48px;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    transition: font-size 0.2s ease;
 }
 
 
